--- a/pom.xml
+++ b/pom.xml
@@ -82,19 +82,9 @@
 		<!-- jwt dependencies -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-api</artifactId>
-			<version>0.11.5</version>
-	f	</dependency>
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-impl</artifactId>
-			<version>0.11.5</version>
-		</dependency>
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-jackson</artifactId>
-			<version>0.11.5</version>
-		</dependency>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+	f	</dependency>				
 	</dependencies>
 
 	<build>
